--- a/main.html
+++ b/main.html
@@ -7,23 +7,16 @@
 
   <body>
     <!-- write the body here -->
-	  
-<form>
-	  <form id="myForm">
-		  <div>
-			  <label for="age">age:</label>
-			  <input id="age" type="number" required>
-			  <label for="name">Name:</label>
-			  <input id="name" name="name" type="text" required>
-		  </div>
-		  <div>
-			  <label for="name">name:</label>
-			  <input id="name" type="text" required>
-			  <label for="age">Age:</label>
-			  <input id="age" name="age" type="number" required>
-		  </div>
-		  <button id="btn" type="submit">Submit</button>
-	  </form>
+<form id="myForm">
+	<label for="name">Name:</label>
+	<input type="text" id="name" name="name" required>
+
+	<label for="age">Age:</label>
+	<input type="number" id="age" name="age" required>
+
+	<button type="submit" id="btn">Submit</button>
+</form>
+	
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
