--- a/main.html
+++ b/main.html
@@ -7,15 +7,13 @@
 
   <body>
     <!-- write the body here -->
-<form id="myForm">
-	<label for="name">Name:</label>
-	<input type="text" id="name" name="name" required>
-
-	<label for="age">Age:</label>
-	<input type="number" id="age" name="age" required>
-
-	<button type="submit" id="btn">Submit</button>
-</form>
+<form>
+    <label for="age">age:</label>
+    <input type="number" id="age" required>
+    <label for="name">name:</label>
+    <input type="text" id="name" required>
+     <button id="btn" type="submit">Submit</button>
+  </form>
 	
     <script type="text/javascript" src="./script.js"></script>
   </body>
